# vioraClient

./: CMakeLists.txt  core.cpp  core.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  structure.h
